mon premier cube

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		
 		<script src="assets/three.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/spaceShip.js"></script>
 	</body>
 </html>
