création class pilote

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		
 		<script src="assets/three.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/spaceShip.js"></script>
+		<script src="js/Player.js"></script>
+		<script src="js/Turret.js"></script>
 	</body>
 </html>
