--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		
 		<script src="assets/three.min.js"></script>
+		<script src="js/Enemy.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/spaceShip.js"></script>
 	</body>
