gestion des inputs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		<script src="assets/three.min.js"></script>
 		<script src="js/Enemy.js"></script>
 		<script src="js/Player.js"></script>
+		<script src="js/Turret.js"></script>
+		<script src="js/inputs.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/Turret.js"></script>
+
 	</body>
 </html>
