Direction des vaisseaux + base classe Bullet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		
 		<script src="assets/three.min.js"></script>
 		<script src="js/utils.js"></script>
+		<script src="js/Bullet.js"></script>
 		<script src="js/Enemy.js"></script>
 		<script src="js/Player.js"></script>
 		<script src="js/Turret.js"></script>
