--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="js/Enemy.js"></script>
 		<script src="js/Player.js"></script>
 		<script src="js/Turret.js"></script>
+		<script src="js/Factory.js"></script>
 		<script src="js/inputs.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/main.js"></script>
