--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		
 		<script src="assets/three.min.js"></script>
+		<script src="js/jquery.min.js"></script>
 		<script src="js/utils.js"></script>
 		<script src="js/Bullet.js"></script>
 		<script src="js/Enemy.js"></script>
@@ -16,6 +17,6 @@
 		<script src="js/inputs.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/main.js"></script>
-
+		<p class="score">Scrore: <span>0</span></p>
 	</body>
 </html>
