ajout d'un menu de base et d'une page gameover

--- a/gameOver.html
+++ b/gameOver.html
@@ -5,13 +5,13 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Senord</h1>
+		<h1>Fin de partie !</h1>
 
-		<a href="game.html">Play</a>
+		<a href="game.html">rejouer</a>
+		<a href="index.html">retour au menu</a>
 		
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
 
-		<p class="score">Scrore: <span>0</span></p>
 	</body>
 </html>
