--- a/game.html
+++ b/game.html
@@ -9,6 +9,8 @@
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/utils.js"></script>
+
+		<script src="js/Particle.js"></script>
 		<script src="js/Bullet.js"></script>
 		<script src="js/Enemy.js"></script>
 		<script src="js/Player.js"></script>
