Ajout du score à l'ecran game over

--- a/gameOver.html
+++ b/gameOver.html
@@ -6,12 +6,13 @@
 	</head>
 	<body>
 		<h1>Fin de partie !</h1>
+		<h2>Score: ...</h2>
 
 		<a href="game.html">rejouer</a>
 		<a href="index.html">retour au menu</a>
 		
-		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
+		<script src="js/end.js"></script>
 
 	</body>
 </html>
