--- a/game.html
+++ b/game.html
@@ -9,6 +9,9 @@
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/utils.js"></script>
+		<script type="text/javascript" src="js/objLoader.js"></script>
+		<script type="text/javascript" src="js/mtlLoader.js"></script>
+		<script type="text/javascript" src="js/ddsLoader.js"></script>
 
 		<script src="js/Particle.js"></script>
 		<script src="js/Bullet.js"></script>
@@ -19,6 +22,6 @@
 		<script src="js/inputs.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/main.js"></script>
-		<p class="score">Scrore: <span>0</span></p>
+		<p class="score">Score: <span>0</span></p>
 	</body>
 </html>
