--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 		<script src="js/Factory.js"></script>
 		<script src="js/inputs.js"></script>
 		<script src="js/game.js"></script>
+		<script src="js/loader.js"></script>
 		<script src="js/main.js"></script>
 		<p class="score">Score: <span>0</span></p>
 	</body>
