--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
 		<script src="js/Turret.js"></script>
 		<script src="js/Factory.js"></script>
 		<script src="js/inputs.js"></script>
+		<script src="js/gamepad.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/loader.js"></script>
 		<script src="js/main.js"></script>
