add the controller page

--- a/controles.html
+++ b/controles.html
@@ -5,11 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Senord</h1>
-
-		<a href="game.html">Play</a>
-		<a href="controles.html">Contrôles</a>
-		
+		<a href="index.html" class="bouttonMenu">Menu</a>
+		<center><img src="assets/img/controlesSenord.jpg" alt="controles"></center>
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
 	</body>
