--- a/controles.html
+++ b/controles.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<a href="index.html" class="bouttonMenu">Menu</a>
+		<a href="index.html" class="buttonMenu">Menu</a>
 		<center><img src="assets/img/controlesSenord.jpg" alt="controles"></center>
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
