--- a/controles.html
+++ b/controles.html
@@ -3,6 +3,12 @@
 	<head>
 		<title>Senord</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<style>
+			img {
+				width: 100%;
+				max-width: 1500px;
+			}
+		</style>
 	</head>
 	<body>
 		<a href="index.html" class="buttonMenu">Menu</a>
