--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>Senord</h1>
 
 		<a href="game.html">Play</a>
-		<a href="controles.html">Contrôles</a>
+		<a href="controles.html">Controls</a>
 		
 		<script src="assets/three.min.js"></script>
 		<script src="js/jquery.min.js"></script>
